# song_recognizer

./: .gitignore  README.md
recognizer/: .env  Cargo.toml  diesel.toml
recognizer/db/: songs.db
recognizer/db/migrations/2026-01-02-034941-0000_create_songs_and_fingerprints/: down.sql  up.sql
recognizer/src/: main.rs
recognizer/src/db/: db_utils.rs  mod.rs  models.rs  schema.rs
recognizer/src/recognizer/: declarations.rs  fingerprint.rs  mod.rs  shazam.rs  spectrogram.rs  wav.rs
recognizer/src/spotify/: mod.rs  play_song.py  spotify_utils.rs
