[package]
name = "recognizer"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hound = "3.5.1"
rand = "0.7"
rustfft = "6.4.1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
rspotify = { version = "0.15.3", features = ["cli", "env-file"] }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
webbrowser = "1.0"
# Resolves sqlite path for Windows (needed by Diesel)
[target.'cfg(target_family = "windows")'.dependencies]
libsqlite3-sys = { version = ">=0.30.1,<0.36.0", features = ["bundled"] }
